javacc compilado/Compilador.java
/* Generated By:JavaCC: Do not edit this line. Compilador.java */
package compilador;
import java.util.ArrayList;

public class Compilador implements CompiladorConstants {
        public static ArrayList<String> tablaTok = new ArrayList();

  final public void Programa() throws ParseException {
    jj_consume_token(INCLUIR);
    if (jj_2_1(3)) {
      jj_consume_token(ESTANDAR);
    } else if (jj_2_2(3)) {
      jj_consume_token(FUNCIONMAT);
    } else if (jj_2_3(3)) {
      jj_consume_token(MATRIZ);
    } else if (jj_2_4(3)) {
      jj_consume_token(CADENA);
    } else if (jj_2_5(3)) {
      jj_consume_token(LISTA);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    if (jj_2_6(3)) {
      jj_consume_token(DEFINIR);
      jj_consume_token(VARIABLE);
      jj_consume_token(VALINT);
      jj_consume_token(LIMITANTE);
    } else {
      ;
    }
    jj_consume_token(USINGNMST);
    jj_consume_token(LIMITANTE);
    Principal();
    jj_consume_token(0);
  }

  final public void Principal() throws ParseException {
    jj_consume_token(INTMAIN);
    jj_consume_token(LLAIZQ);
    Sentencias();
    jj_consume_token(RETURN);
    jj_consume_token(LLADER);
  }

  final public void Sentencias() throws ParseException {
    label_1:
    while (true) {
      if (jj_2_7(3)) {
        ;
      } else {
        break label_1;
      }
      if (jj_2_8(3)) {
        Declaraciones();
      } else if (jj_2_9(3)) {
        Impresiones();
      } else if (jj_2_10(3)) {
        SentenciaIf();
      } else if (jj_2_11(3)) {
        SentenciaFor();
      } else if (jj_2_12(3)) {
        SentenciaWhile();
      } else if (jj_2_13(3)) {
        IGUALACIONes();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void Declaraciones() throws ParseException {
    if (jj_2_14(3)) {
      TipoDeDato();
      jj_consume_token(VARIABLE);
      jj_consume_token(LIMITANTE);
      Vuelta();
    } else if (jj_2_15(3)) {
      TipoDeDato();
      jj_consume_token(VARIABLE);
      jj_consume_token(IGUALACION);
      Valor();
      jj_consume_token(LIMITANTE);
      Vuelta();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Vuelta() throws ParseException {
    if (jj_2_16(3)) {
      Declaraciones();
    } else {
      Sentencias();
    }
  }

  final public void SentenciaIf() throws ParseException {
    if (jj_2_17(3)) {
      jj_consume_token(CONIF);
      jj_consume_token(PARIZQ);
      Comparaciones();
      jj_consume_token(PARDER);
      jj_consume_token(LLAIZQ);
      Sentencias();
      jj_consume_token(LLADER);
      jj_consume_token(CONELSE);
      jj_consume_token(LLAIZQ);
      Sentencias();
      jj_consume_token(LLADER);
    } else if (jj_2_18(3)) {
      jj_consume_token(CONIF);
      jj_consume_token(PARIZQ);
      Comparaciones();
      jj_consume_token(PARDER);
      jj_consume_token(LLAIZQ);
      Sentencias();
      jj_consume_token(LLADER);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void SentenciaFor() throws ParseException {
    jj_consume_token(FOR);
    jj_consume_token(PARIZQ);
    IGUALACIONes();
    jj_consume_token(LIMITANTE);
    Comparaciones();
    jj_consume_token(LIMITANTE);
    jj_consume_token(VARIABLE);
    if (jj_2_19(3)) {
      jj_consume_token(INCREMENTO);
    } else if (jj_2_20(3)) {
      jj_consume_token(DECREMENTO);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(PARDER);
    jj_consume_token(LLAIZQ);
    Sentencias();
    jj_consume_token(LLADER);
  }

  final public void SentenciaWhile() throws ParseException {
    jj_consume_token(WHILE);
    jj_consume_token(PARIZQ);
    Comparaciones();
    jj_consume_token(PARDER);
    jj_consume_token(LLAIZQ);
    Sentencias();
    jj_consume_token(LLADER);
  }

  final public void Impresiones() throws ParseException {
    jj_consume_token(IMPRESION);
    jj_consume_token(SALCOUT);
    datosImprimibles();
    jj_consume_token(LIMITANTE);
  }

  final public void datosImprimibles() throws ParseException {
    if (jj_2_21(3)) {
      jj_consume_token(VALCHAR);
    } else if (jj_2_22(3)) {
      jj_consume_token(VARIABLE);
    } else if (jj_2_23(3)) {
      jj_consume_token(VALINT);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void IGUALACIONes() throws ParseException {
    TipoDeDato();
    jj_consume_token(VARIABLE);
    jj_consume_token(IGUALACION);
    if (jj_2_24(3)) {
      jj_consume_token(VARIABLE);
    } else if (jj_2_25(3)) {
      jj_consume_token(VALINT);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Comparaciones() throws ParseException {
    Valor();
    Operadores();
    Valor();
  }

  final public void Valor() throws ParseException {
    if (jj_2_26(3)) {
      jj_consume_token(VARIABLE);
    } else if (jj_2_27(3)) {
      jj_consume_token(VALINT);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Operadores() throws ParseException {
    if (jj_2_28(3)) {
      jj_consume_token(MAYOR);
    } else if (jj_2_29(3)) {
      jj_consume_token(MENOR);
    } else if (jj_2_30(3)) {
      jj_consume_token(IGUAL);
    } else if (jj_2_31(3)) {
      jj_consume_token(DIFFERENT);
    } else if (jj_2_32(3)) {
      jj_consume_token(MAYORIGUAL);
    } else if (jj_2_33(3)) {
      jj_consume_token(MENORIGUAL);
    } else if (jj_2_34(3)) {
      jj_consume_token(IGUAL);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void TipoDeDato() throws ParseException {
    if (jj_2_35(3)) {
      jj_consume_token(TYPELONG);
    } else if (jj_2_36(3)) {
      jj_consume_token(TYPEBOOLEAN);
    } else if (jj_2_37(3)) {
      jj_consume_token(TYPECHAR);
    } else if (jj_2_38(3)) {
      jj_consume_token(TYPEINT);
    } else if (jj_2_39(3)) {
      jj_consume_token(TYPEFLOAT);
    } else if (jj_2_40(3)) {
      jj_consume_token(TYPEDOUBLE);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void OperadorIncremental() throws ParseException {
    if (jj_2_41(3)) {
      jj_consume_token(INCREMENTO);
    } else if (jj_2_42(3)) {
      jj_consume_token(DECREMENTO);
    } else if (jj_2_43(3)) {
      jj_consume_token(SUMA);
      jj_consume_token(IGUALACION);
      jj_consume_token(VALINT);
    } else if (jj_2_44(3)) {
      jj_consume_token(RESTA);
      jj_consume_token(IGUALACION);
      jj_consume_token(VALINT);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  private boolean jj_2_27(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  private boolean jj_2_28(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  private boolean jj_2_29(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_29(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  private boolean jj_2_30(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_30(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  private boolean jj_2_31(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_31(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  private boolean jj_2_32(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_32(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  private boolean jj_2_33(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_33(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(32, xla); }
  }

  private boolean jj_2_34(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_34(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(33, xla); }
  }

  private boolean jj_2_35(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_35(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(34, xla); }
  }

  private boolean jj_2_36(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_36(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(35, xla); }
  }

  private boolean jj_2_37(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_37(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(36, xla); }
  }

  private boolean jj_2_38(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_38(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(37, xla); }
  }

  private boolean jj_2_39(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_39(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(38, xla); }
  }

  private boolean jj_2_40(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_40(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(39, xla); }
  }

  private boolean jj_2_41(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_41(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(40, xla); }
  }

  private boolean jj_2_42(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_42(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(41, xla); }
  }
